Funcao limpar_tela

--- a/Lets_Code_ADA/DS_PY_001_Logica_de_Programacao_PY/Jogo_Forca.ipynb
+++ b/Lets_Code_ADA/DS_PY_001_Logica_de_Programacao_PY/Jogo_Forca.ipynb
@@ -27,24 +27,22 @@
       "\n",
       "    \n",
       "a_____\n",
-      "\n",
-      "a____e\n",
-      "\n",
-      "a__o_e\n",
-      "\n",
-      "\n",
-      "a__o_e\n",
-      "\n",
-      "Você ainda tem 2 tentativas.\n",
-      "\n",
-      "ar_ore\n",
-      "\n",
-      "ar_ore\n",
-      "\n",
-      "arvore\n",
-      "\n",
-      "VOCÊ GANHOU!!!\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mh:\\Meu Drive\\Estudos\\Programação\\Python\\Let's Code\\894 Diversidade Tech   EXT\\Jogo_Forca.ipynb Célula: 1\u001b[0m in \u001b[0;36m<cell line: 84>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m                 \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(letras_descobertas)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=81'>82</a>\u001b[0m                 \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mVocê ainda tem \u001b[39m\u001b[39m{\u001b[39;00mchances\u001b[39m}\u001b[39;00m\u001b[39m tentativas.\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m jogar()\n",
+      "\u001b[1;32mh:\\Meu Drive\\Estudos\\Programação\\Python\\Let's Code\\894 Diversidade Tech   EXT\\Jogo_Forca.ipynb Célula: 1\u001b[0m in \u001b[0;36mjogar\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m ganhou \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m \u001b[39mwhile\u001b[39;00m (\u001b[39mnot\u001b[39;00m ganhou):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m     letra \u001b[39m=\u001b[39m solicitar_letra()\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m     \u001b[39mif\u001b[39;00m (letra \u001b[39min\u001b[39;00m palavra_sorteada):\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m         limpar_tela()\n",
+      "\u001b[1;32mh:\\Meu Drive\\Estudos\\Programação\\Python\\Let's Code\\894 Diversidade Tech   EXT\\Jogo_Forca.ipynb Célula: 1\u001b[0m in \u001b[0;36msolicitar_letra\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolicitar_letra\u001b[39m():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     letra \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mDigite uma letra: \u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m letra\u001b[39m.\u001b[39misalpha():\n\u001b[0;32m     <a href='vscode-notebook-cell:/h%3A/Meu%20Drive/Estudos/Programa%C3%A7%C3%A3o/Python/Let%27s%20Code/894%20Diversidade%20Tech%20%20%20EXT/Jogo_Forca.ipynb#W0sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mCactere digitado não é uma letra.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\renat\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1177\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1173\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1174\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1175\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1176\u001b[0m     )\n\u001b[1;32m-> 1177\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[0;32m   1178\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[0;32m   1179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1181\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m   1182\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\renat\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ipykernel\\kernelbase.py:1219\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1216\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m   1217\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1218\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1219\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m   1220\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1221\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -94,6 +92,13 @@
     "    for index, elemento in enumerate(palavra_sorteada):\n",
     "        if (letra == elemento):\n",
     "            letras_descobertas[index] = elemento\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def limpar_tela():\n",
+    "    import os\n",
+    "    os.system('cls' if os.name == 'nt' else 'clear')\n",
+    "    pass\n",
     "\n",
     "\n",
     "def jogar():\n",
@@ -107,6 +112,7 @@
     "    while (not ganhou):\n",
     "        letra = solicitar_letra()\n",
     "        if (letra in palavra_sorteada):\n",
+    "            limpar_tela()\n",
     "            verificar_letra(palavra_sorteada, letra, letras_descobertas)\n",
     "            print(f'{\"\".join(letras_descobertas)}\\n')\n",
     "            if (\"\".join(letras_descobertas) == palavra_sorteada):\n",
@@ -115,13 +121,14 @@
     "        else:\n",
     "            chances -= 1\n",
     "            if (chances == 0):\n",
+    "                limpar_tela()\n",
     "                print(f'\\nVocê PERDEU!!!')\n",
     "                print(f'\\nPalavra era: {palavra_sorteada}\\n')\n",
     "                break\n",
     "            else:\n",
+    "                limpar_tela()\n",
     "                print(f'\\n{\"\".join(letras_descobertas)}')\n",
     "                print(f'\\nVocê ainda tem {chances} tentativas.\\n')\n",
-    "\n",
     "\n",
     "jogar()\n"
    ]
