Colocando os imports fora daa funcao

--- a/Lets_Code_ADA/DS_PY_001_Logica_de_Programacao_PY/Jogo_Forca.ipynb
+++ b/Lets_Code_ADA/DS_PY_001_Logica_de_Programacao_PY/Jogo_Forca.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import random\n",
+    "\n",
     "def sortear_palavra():\n",
-    "    import random\n",
     "    lista_palavras = ['arvore', 'banana', 'gato', 'bola', 'escova']\n",
     "    palavra_sorteada = random.choice(lista_palavras)\n",
     "    chances = (len(palavra_sorteada)//2)\n",
@@ -42,7 +44,7 @@
     "    return letra\n",
     "\n",
     "\n",
-    "def lista_letras(palavra_sorteada: str) -> list:\n",
+    "def lista_underline(palavra_sorteada: str) -> list:\n",
     "    letras_descobertas = (len(palavra_sorteada)*\"_ \").split(\" \")[:-1]\n",
     "    return letras_descobertas\n",
     "\n",
@@ -55,7 +57,6 @@
     "\n",
     "\n",
     "def limpar_tela():\n",
-    "    import os\n",
     "    os.system('cls' if os.name == 'nt' else 'clear')\n",
     "    pass\n",
     "\n",
@@ -64,7 +65,7 @@
     "\n",
     "    palavra_sorteada, chances = sortear_palavra()\n",
     "    comecar(palavra_sorteada, chances)\n",
-    "    letras_descobertas = lista_letras(palavra_sorteada)\n",
+    "    letras_descobertas = lista_underline(palavra_sorteada)\n",
     "\n",
     "    ganhou = False\n",
     "\n",
